2004-04-07  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb,
	  lib/alexandria/ui/main_app.rb:

	Implemented the possibility to delete a library.

2004-04-06  Laurent Sansonetti  <lrz@gnome.org>
	
	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Displays an error dialog when the user picks a new name for a 
	  library which contains at least one illegal character ;

	- Automatically show the sidepane upon "New Library", because it
	  may be hidden ;

	- Fixed a bug in the random name chooser (for "New Library") ; 

	- Displays an error dialog when the user tries to add a book
	  which already exists in the selected library ;

	- Displays smaller names on the icon view (max 15 characters).

2004-04-05  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb:

	Fixed a bug when loading books (the reference to the Library obj
	is not saved in the YAML description).

	* lib/alexandria/ui/main_app.rb:

	Implemented the "New Library" feature.

2004-04-04  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb:

	Libraries (in the side pane) are now 'editable' (means that it's
	possible to rename them).

2004-04-03  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Properties [menu|popup] items are now disabled unless a single book
	is selected.
	
	* data/alexandria/glade/info_book_dialog.glade,
	  data/alexandria/glade/new_book_dialog.glade:

	Fixed Gtk::Button response IDs.

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	- Added statusbar information about current selection ;
	- Added "View as [Icons|List]" in the popup menus.

2004-04-01  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade:

	Moved 'Edit/Delete' after 'Edit/[De]select All'.

	* lib/alexandria/book.rb,